--- a/metrics/multi_product/index.html
+++ b/metrics/multi_product/index.html
@@ -2118,7 +2118,7 @@
     Whenever possible, this is the preferred DAU reporting definition to use for Mobile products.
     This metric needs to be aggregated by <code>submission_date</code>. If it is not aggregated by <code>submission_date</code>,
     it is similar to a "days of use" metric, and not DAU.</p>
-<pre><code>For more information, refer to [the DAU description in the Mozilla Data Documentation](https://docs.telemetry.mozilla.org/concepts/terminology.html#dau).
+<pre><code>For more information, refer to [the DAU description in Confluence](https://mozilla-hub.atlassian.net/wiki/spaces/DATA/pages/314704478/Daily+Active+Users+DAU+Metric).
 For questions please contact bochocki@mozilla.com or firefox-kpi@mozilla.com.
 </code></pre>
 <p>Data Source: <a href="https://mozilla.github.io/metric-hub/data_sources/multi_product/#mobile_active_users_aggregates_v1"><code>mobile_active_users_aggregates_v1</code></a></p>
@@ -2140,7 +2140,7 @@ For questions please contact bochocki@mozilla.com or firefox-kpi@mozilla.com.
     and is automatically cross-checked, actively monitored, and change controlled.
     To reconstruct the annual Mobile DAU KPI, this metric needs to be aggregated by
     <code>EXTRACT(YEAR FROM submission_date)</code>.  </p>
-<pre><code>For more information, refer to [the DAU description in the Mozilla Data Documentation](https://docs.telemetry.mozilla.org/concepts/terminology.html#dau).
+<pre><code>For more information, refer to [the DAU description in Confluence](https://mozilla-hub.atlassian.net/wiki/spaces/DATA/pages/314704478/Daily+Active+Users+DAU+Metric).
 For questions please contact bochocki@mozilla.com or firefox-kpi@mozilla.com.
 </code></pre>
 <p>Data Source: <a href="https://mozilla.github.io/metric-hub/data_sources/multi_product/#mobile_active_users_aggregates_v1"><code>mobile_active_users_aggregates_v1</code></a></p>
