--- a/functions/index.html
+++ b/functions/index.html
@@ -2141,7 +2141,7 @@
 <summary>Definition:</summary>
 
 
-<pre><code class="language-sql">functools.partial(&lt;function FunctionsSpec.from_dict.&lt;locals&gt;.&lt;dictcomp&gt;.&lt;lambda&gt; at 0x7f7cad239cf0&gt;, definition='COALESCE(SUM({select_expr}), 0)')
+<pre><code class="language-sql">functools.partial(&lt;function FunctionsSpec.from_dict.&lt;locals&gt;.&lt;dictcomp&gt;.&lt;lambda&gt; at 0x7fd19178dcf0&gt;, definition='COALESCE(SUM({select_expr}), 0)')
 </code></pre>
 
 </details>
@@ -2154,7 +2154,7 @@
 <summary>Definition:</summary>
 
 
-<pre><code class="language-sql">functools.partial(&lt;function FunctionsSpec.from_dict.&lt;locals&gt;.&lt;dictcomp&gt;.&lt;lambda&gt; at 0x7f7cad239ea0&gt;, definition='COALESCE(LOGICAL_OR({select_expr}), FALSE)')
+<pre><code class="language-sql">functools.partial(&lt;function FunctionsSpec.from_dict.&lt;locals&gt;.&lt;dictcomp&gt;.&lt;lambda&gt; at 0x7fd19178dea0&gt;, definition='COALESCE(LOGICAL_OR({select_expr}), FALSE)')
 </code></pre>
 
 </details>
@@ -2167,7 +2167,7 @@
 <summary>Definition:</summary>
 
 
-<pre><code class="language-sql">functools.partial(&lt;function FunctionsSpec.from_dict.&lt;locals&gt;.&lt;dictcomp&gt;.&lt;lambda&gt; at 0x7f7cad239e10&gt;, definition='    SAFE_DIVIDE(\n        SUM(CAST(JSON_EXTRACT_SCALAR({select_expr}, &quot;$.sum&quot;) AS int64)),\n        SUM((SELECT SUM(value) FROM UNNEST(mozfun.hist.extract({select_expr}).values)))\n    )\n')
+<pre><code class="language-sql">functools.partial(&lt;function FunctionsSpec.from_dict.&lt;locals&gt;.&lt;dictcomp&gt;.&lt;lambda&gt; at 0x7fd19178de10&gt;, definition='    SAFE_DIVIDE(\n        SUM(CAST(JSON_EXTRACT_SCALAR({select_expr}, &quot;$.sum&quot;) AS int64)),\n        SUM((SELECT SUM(value) FROM UNNEST(mozfun.hist.extract({select_expr}).values)))\n    )\n')
 </code></pre>
 
 </details>
@@ -2180,7 +2180,7 @@
 <summary>Definition:</summary>
 
 
-<pre><code class="language-sql">functools.partial(&lt;function FunctionsSpec.from_dict.&lt;locals&gt;.&lt;dictcomp&gt;.&lt;lambda&gt; at 0x7f7cad239c60&gt;, definition='    SAFE_DIVIDE(\n        SUM(mozfun.map.get_key(mozfun.hist.extract({select_expr}).values,0)),\n        SUM(mozfun.hist.threshold_count({select_expr},1))\n    )\n')
+<pre><code class="language-sql">functools.partial(&lt;function FunctionsSpec.from_dict.&lt;locals&gt;.&lt;dictcomp&gt;.&lt;lambda&gt; at 0x7fd19178dc60&gt;, definition='    SAFE_DIVIDE(\n        SUM(mozfun.map.get_key(mozfun.hist.extract({select_expr}).values,0)),\n        SUM(mozfun.hist.threshold_count({select_expr},1))\n    )\n')
 </code></pre>
 
 </details>
@@ -2193,7 +2193,7 @@
 <summary>Definition:</summary>
 
 
-<pre><code class="language-sql">functools.partial(&lt;function FunctionsSpec.from_dict.&lt;locals&gt;.&lt;dictcomp&gt;.&lt;lambda&gt; at 0x7f7cad23a950&gt;, definition='COALESCE(SUM({select_expr}), 0)')
+<pre><code class="language-sql">functools.partial(&lt;function FunctionsSpec.from_dict.&lt;locals&gt;.&lt;dictcomp&gt;.&lt;lambda&gt; at 0x7fd19178e950&gt;, definition='COALESCE(SUM({select_expr}), 0)')
 </code></pre>
 
 </details>
@@ -2204,7 +2204,7 @@
 <summary>Definition:</summary>
 
 
-<pre><code class="language-sql">functools.partial(&lt;function FunctionsSpec.from_dict.&lt;locals&gt;.&lt;dictcomp&gt;.&lt;lambda&gt; at 0x7f7cad23a830&gt;, definition='COALESCE(LOGICAL_OR({select_expr}), FALSE)')
+<pre><code class="language-sql">functools.partial(&lt;function FunctionsSpec.from_dict.&lt;locals&gt;.&lt;dictcomp&gt;.&lt;lambda&gt; at 0x7fd19178e830&gt;, definition='COALESCE(LOGICAL_OR({select_expr}), FALSE)')
 </code></pre>
 
 </details>
@@ -2215,7 +2215,7 @@
 <summary>Definition:</summary>
 
 
-<pre><code class="language-sql">functools.partial(&lt;function FunctionsSpec.from_dict.&lt;locals&gt;.&lt;dictcomp&gt;.&lt;lambda&gt; at 0x7f7cad000160&gt;, definition='    SAFE_DIVIDE(\n        SUM(CAST(JSON_EXTRACT_SCALAR({select_expr}, &quot;$.sum&quot;) AS int64)),\n        SUM((SELECT SUM(value) FROM UNNEST(mozfun.hist.extract({select_expr}).values)))\n    )\n')
+<pre><code class="language-sql">functools.partial(&lt;function FunctionsSpec.from_dict.&lt;locals&gt;.&lt;dictcomp&gt;.&lt;lambda&gt; at 0x7fd191554160&gt;, definition='    SAFE_DIVIDE(\n        SUM(CAST(JSON_EXTRACT_SCALAR({select_expr}, &quot;$.sum&quot;) AS int64)),\n        SUM((SELECT SUM(value) FROM UNNEST(mozfun.hist.extract({select_expr}).values)))\n    )\n')
 </code></pre>
 
 </details>
